kubernetes/algod-relay/voitest-relay/fi-1-voitest-relay/s2-k1-fi-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: algo-relay-voitest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relaynode-2
  namespace: algo-relay-voitest
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: algo-relay-voitest
  template:
    metadata:
      labels:
        app: algo-relay-voitest
        server: 00-htz-fi-hel-002
    spec:
      nodeName: s1-k1-fi.a-wallet.net
      hostname: 00-htz-fi-hel-002
      containers:
        - name: algo-relay-voitest
          image: scholtz2/algorand-relay-voitest:3.19.0-stable
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "8000Mi"
              cpu: "4000m"
            limits:
              memory: "16000Mi"
              cpu: "16000m"
          command:
            - /bin/bash
            - /app/run.sh
          ports:
            - containerPort: 5011
              protocol: TCP
            - containerPort: 9100
              protocol: TCP
            - containerPort: 28081
              protocol: TCP
          startupProbe:
            exec:
              command:
              - /bin/bash
              - /app/health.sh
            initialDelaySeconds: 10
            periodSeconds: 10   
            failureThreshold: 1000
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - /app/health.sh
            initialDelaySeconds: 10
            timeoutSeconds: 10   
            failureThreshold: 100
          livenessProbe:
            exec:
              command:
              - /bin/bash
              - /app/health.sh
            initialDelaySeconds: 10
            timeoutSeconds: 10        
            failureThreshold: 6
            terminationGracePeriodSeconds: 10
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: algo-voitest-vol-root-2
              mountPath: /app/data
            - name: algo-voitest-vol-net-2
              mountPath: /app/data/voitest-v1.0
            - name: algo-voitest-vol-catchpoints-2
              mountPath: /app/data/voitest-v1.0/catchpoints
      volumes:
        - name: algo-voitest-vol-root-2
          persistentVolumeClaim:
            claimName: algo-voitest-vol-root-2
        - name: algo-voitest-vol-net-2
          persistentVolumeClaim:
            claimName: algo-voitest-vol-net-2
        - name: algo-voitest-vol-catchpoints-2
          persistentVolumeClaim:
            claimName: algo-voitest-vol-catchpoints-2
