kubernetes/algod-relay/voitest-relay/fi-1-voitest-relay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voitest-24261-service
  namespace: algo-relay-voitest
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: algo-relay-voitest
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 5011
      nodePort: 5011
      targetPort: 5011
---
apiVersion: v1
kind: Service
metadata:
  name: voitest-19102-service
  namespace: algo-relay-voitest
spec:
  type: NodePort
  selector:
    server: 00-htz-fi-hel-002
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 9100
      nodePort: 19102
      targetPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: voitest-9100-service
  namespace: algo-relay-voitest
spec:
  type: NodePort
  selector:
    server: 00-htz-fi-hel-001
  ports:
    - name: algorelay
      protocol: TCP
      appProtocol: http
      port: 9100
      nodePort: 19101
      targetPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: voitest-28081-service
  namespace: algo-relay-voitest
spec:
  type: ClusterIP
  selector:
    app: algo-relay-voitest
  ports:
    - name: algoclient
      protocol: TCP
      appProtocol: http
      port: 28081
      targetPort: 28081
