kubernetes/algod-relay/voitest-relay/fi-1-voitest-relay/ingress-algod.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algorand-voitest-api-ingress
  namespace: algo-relay-voitest
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: DENY";
      proxy_set_header X-Algo-API-Token aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - voitest-api.k1-fi.a-wallet.net
    secretName: tls-voitest-api.k1-fi.a-wallet.net
  rules:
  - host: voitest-api.k1-fi.a-wallet.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voitest-28081-service
            port:
              number: 28081
